fix section 3 animation on mobile

--- a/source/assets/stylesheets/partials/modules/_hero_section.scss
+++ b/source/assets/stylesheets/partials/modules/_hero_section.scss
@@ -102,6 +102,7 @@
   &.intro_3 {
     background-color: transparent;
     @include media("<phablet") {
+      min-height: 320px;
       margin-top: -110px;
     }
   }
